--- a/test/server-to-peer/case-study2/index.html
+++ b/test/server-to-peer/case-study2/index.html
@@ -157,8 +157,8 @@
 
    document.getElementById('stream-data').onclick = function(){
         
-        // stream data usecase
-        let dataStream = hydroRtcClient.streamDataRequest()
+        // stream data usecase, passing datapath file into the server listener
+        let dataStream = hydroRtcClient.streamDataRequest("./data/sensor/sensor-data.txt")
         // null, if client is unable to use the usecase
         if (dataStream != null) {
             // on receiving data stream
@@ -220,8 +220,6 @@
         if (smartDataHandler != null) {
             // on receiving smart data chunk
             smartDataHandler.on('data', (data)=>{
-                //console.log(data)
-                //console.log(typeof data)
                 //THIS NEEDS TO CHANGE, MOVE TO ANOTHER VARIABLE
                 let container = document.getElementById('image-container')
                 let filePath = data.resolution + "/" + data.rowNo + "/" + data.filename + "<br>"
