--- a/test/server-to-peer/case-study2/index.html
+++ b/test/server-to-peer/case-study2/index.html
@@ -125,10 +125,12 @@
 
                     // on receiving peers list
                     dataStream.on('data', (data)=>{
+                        console.log(data)
                         let str = ""
                         document.getElementById("peers").innerHTML = "";
                         data.data.forEach(peer=>{
-                            str += "<option value='"+peer.name+"'>" + peer.name + "</option>"
+                            if (peer !== document.getElementById('name').value)
+                            str += "<option value='"+peer+"'>" + peer + "</option>"
                         })
                         document.getElementById("peers").innerHTML = str;
                         document.getElementById( 'controls' ).style.display = 'block';
