Added load testing script

--- a/test/peer-to-peer/case-study3/index.html
+++ b/test/peer-to-peer/case-study3/index.html
@@ -207,7 +207,7 @@
         try {
             console.log('Here!!!')
             //const { fileData, fileExt } = 
-            hydroRtcClient.getfileData(fileInput, 0.2);
+            hydroRtcClient.getfileData(fileInput, .2);
             // console.log('File ArrayBuffer:', fileData);
             // console.log('File Extension:', fileExt);
         } catch (error) {
