Updates on styles of clientside code

--- a/test/peer-to-peer/case-study3/index.html
+++ b/test/peer-to-peer/case-study3/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div id="chat-container" style="display: none;">
-        <h2> Case Study 3 - P2P </h2>
+        <h2> Sample of a Chat P2P </h2>
         <h3>Users Online</h3>
         <select id="users-list">
         </select>
@@ -208,8 +208,8 @@
             console.log('Here!!!')
             //const { fileData, fileExt } = 
             hydroRtcClient.getfileData(fileInput, .2);
-            // console.log('File ArrayBuffer:', fileData);
-            // console.log('File Extension:', fileExt);
+            //console.log('File ArrayBuffer:', fileData);
+            //console.log('File Extension:', fileExt);
         } catch (error) {
             console.error('Error', error)
         }
